--- a/trunk/main/src/org/iremake/client/ui/package.html
+++ b/trunk/main/src/org/iremake/client/ui/package.html
@@ -21,6 +21,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <div>TODO Dialogs and Frames are disposed now when they aren't needed, maybe for performance reason they should be re-used</div>
+        <div></div>
     </body>
 </html>
