--- a/main/src/org/tools/package.html
+++ b/main/src/org/tools/package.html
@@ -1,7 +1,28 @@
+<!--
+Copyright (C) 2012 Trilarion
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+-->
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>Quasi-Library: org.tools.xxx</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    </head>
     <body>
-        All classes in package org.tools and below should not depend on any classes
-        in org.iremake, but only on standard libraries or third party libraries.
-        The reason is that the code here should be kept general and independent.
+        <div>All classes in packages org.tools.xxx and below should not depend on any classes
+        in other packages, but only on standard libraries or third party libraries.
+        The reason is that the code here should be kept general and independent.</div>
     </body>
 </html>
