--- a/trunk/side/vorbis/www/index.html
+++ b/trunk/side/vorbis/www/index.html
@@ -2,6 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta name="keywords" content="Java, Ogg, Vorbis, Decoder">
+<meta name="description" content="Pure Java Ogg Vorbis Decoder based on JOrbis, VorbisSPI and Tritonus-Share.">
+<meta name="author" content="Trilarion">
 <title>Vorbis Support Java Library</title>
 <style type="text/css">
 body { background: #304070; }
