vorbis: license file included, www updated

--- a/side/vorbis/www/index.html
+++ b/side/vorbis/www/index.html
@@ -66,13 +66,13 @@ h2 { font-size: 1.2em; }
 
 	<h2>Download</h2>
 	
-	<p>Latest version: 1.0 (21th January 2013) - Bundling of the libraries, cleanup of the code and testing
+	<p>Latest version: 1.0 (27th January 2013) - Bundling of the libraries, cleanup of the code and testing
 	
-	<p>License: <a href="http://www.gnu.org/licenses/gpl-2.0.txt">GPLv2+</a></p>
+	<p>License: <a href="http://www.gnu.org/licenses/lgpl-3.0.txt">LGPLv3+</a></p>
 	
 	<p>Requirement: Java 7 or later</p>
 	
-	<p>Download library: <a href="http://imperialism-remake.googlecode.com/files/vorbis-support-1.0.jar">vorbis-support-1.0.jar</a> (97 kB only)</p>
+	<p>Download library: <a href="http://imperialism-remake.googlecode.com/files/vorbis-support-1.0.jar">vorbis-support-1.0.jar</a> (110 kB only)</p>
 	
 	<p>Download sources: <a href="http://imperialism-remake.googlecode.com/files/vorbis-support-1.0-sources.zip">vorbis-support-1.0-sources.zip</a></p>
 
@@ -80,7 +80,7 @@ h2 { font-size: 1.2em; }
 	
 	<p>This library used the Services Provider Interface to enable Ogg/Vorbis playback under the hood without changing any of the code on the client's library side. Just put this library in the classpath and access your
 	sound resources (SourceDataLine or Clip) as you would without Ogg/Vorbis support. See the Java Tutorial on <a href="http://docs.oracle.com/javase/tutorial/sound/playing.html">Playing Back Audio</a> for more information.
-	And here is also an example that plays an entire ogg file.</p>
+	And here is also an example that would play an entire ogg file.</p>
 	
 	<div class="code">
 try {
